--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,14 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
 body{
     text-align: center;
 }
 
 h1{
+    padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -49,15 +55,36 @@ h1{
 }
 
 .button{
-    display: inline-block;
-    margin: 25px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.774);
+
     padding: 10px;
-    border: 3px solid black;
+    margin: 25px;
+    border: 3px solid white;
     border-radius: 25px;
 }
 
 .button:hover{
+    background-color: white;
+    color: black;
+    font-weight: bold;
+}
+
+#gameOverPage{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
     color: white;
-    background-color: black;
-    border-radius: 50px;
+    background-color: rgba(0, 0, 0, 0.966);
+}
+
+#gameOverMsg{
+    font-size: 30px;
 }
