--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,14 @@
     margin: 0;
 }
 
+.stage{
+    margin: auto;
+    max-width: 320px;
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    gap: 1px;
+}
+
 body{
     text-align: center;
 }
@@ -10,11 +18,13 @@ body{
 h1{
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.50);
 }
 
 .square{
     width: 100px;
     height: 100px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.50);
     background-color: beige;
     border: 3px solid black;
     display: inline-block;
@@ -34,7 +44,7 @@ h1{
     bottom: 0;
     left: 0;
     right: 0;
-    content: "\1F412";
+    content: "\1F98D";
     font-size: 50px;
     line-height: 100px;
 }
