--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ h1{
     bottom: 0;
     left: 0;
     right: 0;
-    content: "\1F98D";
+    content: "\1F412";
     font-size: 50px;
     line-height: 100px;
 }
@@ -92,7 +92,7 @@ h1{
     flex-direction: column;
 
     color: white;
-    background-color: rgba(0, 0, 0, 0.966);
+    background-color: rgba(0, 0, 0, 0.90);
 }
 
 #gameOverMsg{
